--- a/css/style.css
+++ b/css/style.css
@@ -1,12 +1,15 @@
 body{
 	margin:1%;
 	font-size:125%;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
 h1{
 	font-size: 2.5em; 
 	font-weight: bold;
     text-align: center;
+    border-bottom: 3px solid #9900CC;
+    border-radius: 9px;
 }
 
 .active{
@@ -60,7 +63,8 @@ ol {
 }
 
 header, nav, main, footer{
-	border: 3px solid red;
+	border: 3px solid #9900CC;
+    border-radius: 9px;
 	margin: 10px;
 }
 
@@ -70,10 +74,17 @@ items in the nav section*/
 nav ul li{
 	background-color: #ECFF4D;
 	padding:5px;
-	font-size: 95%;
+	font-size: 80%;
 	border:1px solid black;
 	display: inline-block;
 	width: 23%;
+}
+
+.center {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 50%;
 }
 
 /*Added this so the links stay the same color*/
@@ -85,19 +96,19 @@ a:visited{
 /* SKIP TO MAIN */
 
 .stmc {
-    background: #e77e23;
+    background: #ECFF4D;
     height: 30px;
-    left: -50%;
+    left: -100%;
     padding: 8px;
     position: absolute;
     transform: translateY(-100%);
     transition: transform 0.3s;
-  }
+}
   
-  .stmc:focus {
+.stmc:focus {
     transform: translateY(0%);
     left: 0%;
-  }
+}
 
 /* GRID */
 
@@ -105,13 +116,6 @@ a:visited{
     display: grid;
     /*align-items: center;*/
 }
-
-/*
-.links {
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr 1fr;
-    align-items: center;
-} */
 
 .bacon-photos {
     display: grid;
@@ -172,3 +176,14 @@ video {
     max-height: 75%;
     max-width: 100%;
 } 
+
+/* 
+Media Query pulled from this site, still not solid on these:
+https://css-tricks.com/introduction-reduced-motion-media-query/ 
+*/
+
+@media (prefers-reduced-motion: reduce) {
+    .vid {
+      animation: none;
+    }
+  }
