--- a/css/style.css
+++ b/css/style.css
@@ -55,7 +55,7 @@ p, h1, h2, h3, li {
 
 ul {
     text-align: center;
-    border: 10px 15px 10px 15px;
+    /* border: 10px 15px 10px 15px; */
 }
 
 ol {
